tests/Asm/negative/vtest010.jva
-- Value stack type mismatch

function id(integer) : integer {
  push arg[0];
  ret;
}

function app2((integer -> integer, integer) -> integer, integer -> integer, integer) : integer {
  push arg[2];
  push arg[1];
  push arg[0];
  tcall $ 2;
}

function main() {
  push 5;
  calloc id 0;
  push $;
  tcall app2;
}
